Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,6 +311,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 0.1</th>\n",
        "      <th>PassengerId</th>\n",
        "      <th>Survived</th>\n",
        "      <th>Pclass</th>\n",
@@ -327,7 +328,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>986</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -343,7 +345,8 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>987</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -359,7 +362,8 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>988</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -375,7 +379,8 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>989</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -391,7 +396,8 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>990</th>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -411,22 +417,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  PassengerId  Survived Pclass                     Name   Sex  \\\n",
-       "0         0.0          1.0       0.0      3  Braund, Mr. Owen Harris  male   \n",
-       "0         0.0          1.0       0.0      3  Braund, Mr. Owen Harris  male   \n",
-       "0         0.0          1.0       0.0      3  Braund, Mr. Owen Harris  male   \n",
-       "0         0.0          1.0       0.0      3  Braund, Mr. Owen Harris  male   \n",
-       "0         0.0          1.0       0.0      3  Braund, Mr. Owen Harris  male   \n",
+       "     Unnamed: 0  Unnamed: 0.1  PassengerId  Survived Pclass  \\\n",
+       "986           0           0.0          1.0       0.0      3   \n",
+       "987           0           0.0          1.0       0.0      3   \n",
+       "988           0           0.0          1.0       0.0      3   \n",
+       "989           0           0.0          1.0       0.0      3   \n",
+       "990           0           0.0          1.0       0.0      3   \n",
        "\n",
-       "    Age  SibSp  Parch     Ticket  Fare Cabin Embarked  \n",
-       "0  22.0    1.0    0.0  A/5 21171  7.25   NaN        S  \n",
-       "0  22.0    1.0    0.0  A/5 21171  7.25   NaN        S  \n",
-       "0  22.0    1.0    0.0  A/5 21171  7.25   NaN        S  \n",
-       "0  22.0    1.0    0.0  A/5 21171  7.25   NaN        S  \n",
-       "0  22.0    1.0    0.0  A/5 21171  7.25   NaN        S  "
+       "                        Name   Sex   Age  SibSp  Parch     Ticket  Fare Cabin  \\\n",
+       "986  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "987  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "988  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "989  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "990  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "\n",
+       "    Embarked  \n",
+       "986        S  \n",
+       "987        S  \n",
+       "988        S  \n",
+       "989        S  \n",
+       "990        S  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +447,7 @@
    "source": [
     "duplicates = df[df.duplicated()]\n",
     "print(len(duplicates))\n",
-    "duplicates.head()"
+    "duplicates.tail()"
    ]
   },
   {
