Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>986</th>\n",
+       "      <th>891</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -345,7 +345,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>987</th>\n",
+       "      <th>892</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -362,7 +362,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>988</th>\n",
+       "      <th>893</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -379,7 +379,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>989</th>\n",
+       "      <th>894</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -396,7 +396,7 @@
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>990</th>\n",
+       "      <th>895</th>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -418,28 +418,28 @@
       ],
       "text/plain": [
        "     Unnamed: 0  Unnamed: 0.1  PassengerId  Survived Pclass  \\\n",
-       "986           0           0.0          1.0       0.0      3   \n",
-       "987           0           0.0          1.0       0.0      3   \n",
-       "988           0           0.0          1.0       0.0      3   \n",
-       "989           0           0.0          1.0       0.0      3   \n",
-       "990           0           0.0          1.0       0.0      3   \n",
+       "891           0           0.0          1.0       0.0      3   \n",
+       "892           0           0.0          1.0       0.0      3   \n",
+       "893           0           0.0          1.0       0.0      3   \n",
+       "894           0           0.0          1.0       0.0      3   \n",
+       "895           0           0.0          1.0       0.0      3   \n",
        "\n",
        "                        Name   Sex   Age  SibSp  Parch     Ticket  Fare Cabin  \\\n",
-       "986  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
-       "987  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
-       "988  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
-       "989  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
-       "990  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "891  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "892  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "893  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "894  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
+       "895  Braund, Mr. Owen Harris  male  22.0    1.0    0.0  A/5 21171  7.25   NaN   \n",
        "\n",
        "    Embarked  \n",
-       "986        S  \n",
-       "987        S  \n",
-       "988        S  \n",
-       "989        S  \n",
-       "990        S  "
+       "891        S  \n",
+       "892        S  \n",
+       "893        S  \n",
+       "894        S  \n",
+       "895        S  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
    "source": [
     "duplicates = df[df.duplicated()]\n",
     "print(len(duplicates))\n",
-    "duplicates.tail()"
+    "duplicates.head()"
    ]
   },
   {
